Updates to CharForm, including: correct handler for nested items, addition of wallJump input, which was missing, and correction of order.

--- a/src/components/createPage/createPage.css
+++ b/src/components/createPage/createPage.css
@@ -66,3 +66,8 @@ section > button {
   height: 30px;
   margin: 0 auto;
 }
+
+.checkbox {
+  width: auto;
+  vertical-align: middle;
+}
